fixed text bubble spacing

--- a/f1_front_end/src/index.css
+++ b/f1_front_end/src/index.css
@@ -122,7 +122,7 @@ html, body {
   max-width: 70%;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 20px 0;
+  margin: 5px 0;
   border-radius: 20px;
   font-size: 14px;
   line-height: 1.5;
